--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
             <p>Many Thanks to all Leads & Managers : Shreyas , Tanveer , Dinesh , Pankaj , Pushpendra Sir , Pravin , Prem , Jehad , Ben for your endless support and guidance.</p>
             <p>Special heartfelt thank you to my dearest friends : Rohan, Prashant, Ronak, Tejas and Harshit, who are not just colleagues but brothers who have always stood by me. Your friendship has meant the world to me.</p>
             <p>I also extend my deepest gratitude to Karthik, Yash, Prashant M, Pratik, Parimal, Aditya, Anshul bhai, Divya, Prachi, Pooja, Snehal, Sheetal, Swati, who brought joy and laughter to each day in the office.</p>
-            <p>Moreover, I wish the best of luck to the newly joined members Pranav, Premdas (Ramdas), and Rohan.</p>
+            <p>A big thanks to the whole Israel and DVCI team for always being available to help.</p>
+            <p>Moreover, I wish the best of luck to the newly joined members Pranav, Premdas (Ramdas), and Rohan. Make it Amazing! </p>
             <p>Thank you all for everything, and I wish you all continued success and happiness in your endeavors. Let's stay in touch and keep meeting whenever possible.</p>
             <p class="fun-message">Warm regards,<br>Darshan Dharmik</p>
         </div>
